Image element added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         main {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 3fr 5fr;
             gap: 1rem;
             margin-bottom: 1rem;
         }
@@ -57,8 +57,11 @@
     </main>
     <footer>
         <a href="https://app.netlify.com/sites/json2svg/deploys"><img
-                src="https://api.netlify.com/api/v1/badges/b4f04530-6ff5-4e50-887a-6c6b0162255b/deploy-status"></a>
-        The source code of JSON-2-SVG can be found on <a href="https://github.com/TracyGJG/json2svg#readme">GitHub</a>
+                src="https://api.netlify.com/api/v1/badges/b4f04530-6ff5-4e50-887a-6c6b0162255b/deploy-status"
+                style="vertical-align: middle;"></a>
+        <span style="margin: 0.5rem;">The source code of JSON-2-SVG can be found on <a
+                href="https://github.com/TracyGJG/json2svg#readme">GitHub</a>
+        </span>
     </footer>
 
     <script type="module">
